# lczero-easy

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
api/: main.py  schema.py
docker/: Dockerfile  docker-compose.yml  start.sh
experiments/: attention_interface.py  board_interface.py  chess_engine.py  encoding_interface.py  global_variables.py  main.py  model_interface.py  policy_interface.py
src/lczero_easy/: __init__.py
src/lczero_easy/board/: __init__.py  utils.py
src/lczero_easy/model/: __init__.py  utils.py  wrapper.py
src/lczero_easy/move/: __init__.py  constants.py  utils.py
src/lczero_easy/visualisation/: board.py  model.py  policy.py
src/lczero_easy/xai/: attention.py
tests/unit/board/: test_utils.py
tests/unit/move/: test_utils.py
